2016-05-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/Utils.cxx: write out nll curve in ROOT file, not just plots 

2016-05-11 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: allow 'all' as shorthand for 'allPlots'. Fix
	multiline fatal message.

2016-05-11 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/Utils.cxx: use C++ casts in fit method. Check that our data actually
	exists; throw fatal in case data is absent. (Points to a misuse of blinded
	fits typically.)

2015-12-14 Sophio Pataraia <sophio.pataraia@cern.ch>
	* fixed shape systematics reset function (src/Utils.cxx)
        * fixed channel setWeights function (python/fitConfig.py)

2015-12-01 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Port back enableDetailedOutput setting for HypoTestTool from ROOT
	example

2015-11-30 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/UpperLimitTable.py
	* scripts/UpperLimitTableTex.py
	* Don't use a weird list but use a dictionary as intermediate holder of
	results
	* Write out significance of p-value as well
	* Automatically cap nan p-values to 0.5 if nObs < nExp

2015-11-25 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch
	* small bug fix in scripts/UpperLimitTable

2015-11-24 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/UpperLimitTable: allow setting of output prefix, number of
	points and mu range by hand. Store plot scan in png, pdf and eps format.

2015-10-14 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Supress several memory leaks in the collection of list files
	* LimitResult now uses std::string

2015-10-14 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Setup script fixes for zsh

2015-10-13 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch
	* small hack in prepareHistos.py to allow for backup cache files on eos
	M python/prepareHistos.py

2015-10-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/GenerateTreeDescriptionFromJSON.py now stores fID as string and writes appropriate header 
