@@ -140,10 +140,11 @@ namespace Util
      @param minos Boolean deciding whether asymmetric errors are calculated, eg whether MINOS is run
      @param minosPars When minos is called, defining what parameters need asymmetric error calculation
      @param doFixParameters Boolean deciding if some parameters are fixed to a value given or not, default=kFALSE
-     @param fixedPars String of parameter1:value1,parameter2:value2 giving information on which parameter to fix to which value if dofixParameter == kTRUE, default='' 
+     @param fixedPars String of parameter1:value1,parameter2:value2 giving information on which parameter to fix to which value if dofixParameter == kTRUE, default=''
+     @param noFit Don't re-run fit, but load parameter from after-fit workspace
   */  
   void GenerateFitAndPlot(TString fcName, TString anaName, Bool_t drawBeforeFit, Bool_t drawAfterFit, Bool_t plotCorrelationMatrix, 
-			  Bool_t plotSeparateComponents, Bool_t plotNLL,  Bool_t minos = kFALSE, TString minosPars="", Bool_t doFixParameters = kFALSE, TString fixedPars="", bool ReduceCorrMatrix = true);
+			  Bool_t plotSeparateComponents, Bool_t plotNLL,  Bool_t minos = kFALSE, TString minosPars="", Bool_t doFixParameters = kFALSE, TString fixedPars="", bool ReduceCorrMatrix = true, bool noFit = false);
   
   /**
      Function to plot each region with data, pdf and pdf-components(=samples)  
